tests/cases/vectors/errors/vector-len-non-vec.ari
fn main() -> i64 {
  return len(1);
}
